[FE] fix container auto overflow

--- a/asset-management-fe/src/index.css
+++ b/asset-management-fe/src/index.css
@@ -12,4 +12,4 @@ code {
     monospace;
 }
 html, body {margin: 0; height: 100%; overflow: auto}
-div{overflow: hidden}
+.appcontainer{overflow: hidden}
